--- a/DexterAdmin_Frontend/dexter-admin/src/styles.scss
+++ b/DexterAdmin_Frontend/dexter-admin/src/styles.scss
@@ -1,1 +1,9 @@
-@import "./assets/themes/default-theme.scss";
+@import '~@angular/material/theming';
+@import 'assets/themes/dexter-theme.scss';
+
+
+
+
+
+
+
