--- a/DexterAdmin_Frontend/dexter-admin/src/app/app.component.html
+++ b/DexterAdmin_Frontend/dexter-admin/src/app/app.component.html
@@ -1,6 +1,7 @@
 <mat-sidenav-container fxFlex class="main-container">
-  <mat-toolbar titlebar color="accent">
+  <mat-toolbar titlebar color="accent" fxLayoutAlign="space-between center">
     <h1>Dexter Admin</h1>
+    <app-login></app-login>
   </mat-toolbar>
 
   <mat-sidenav #sidenav mode="side" opened="true" fxLayout="column" fxLayoutAlign="start stretch" class="main-sidenav">
@@ -64,7 +65,7 @@
         </mat-card-title>
       </mat-card-header>
       <mat-card-content fxLayoutAlign="center">
-        
+
         <form [formGroup]="limitsForm" (ngSubmit)="onSubmit()" novalidate>
           <div fxFill>
             <div fxLayout="row" fxLayoutAlign="start stretch">
@@ -118,6 +119,6 @@
     </mat-card>
 
     <footer copyright fxLayoutAlign="end center">© 2012 - 2016 by Dexter Solutions, Inc. All rights reserved.</footer>
-  
+
   </div>
 </mat-sidenav-container>
