--- a/DexterAdmin_Frontend/dexter-admin/src/app/app.component.html
+++ b/DexterAdmin_Frontend/dexter-admin/src/app/app.component.html
@@ -1,124 +1,17 @@
-<mat-sidenav-container fxFlex class="main-container">
-  <mat-toolbar titlebar color="accent" fxLayoutAlign="space-between center">
-    <h1>Dexter Admin</h1>
-    <app-login></app-login>
+<div fxFill class="main-container">
+  <mat-toolbar titlebar color="primary" fxLayout="row">
+    <img fxFlex="nogrow" src="../assets/img/DexterSolutionsLogo_SM.png">
+    <h1 fxFlex siteTitle>{{siteTitle}}</h1>
+    <app-login fxFlex="nogrow"></app-login>
   </mat-toolbar>
 
-  <mat-sidenav #sidenav mode="side" opened="true" fxLayout="column" fxLayoutAlign="start stretch" class="main-sidenav">
-    <button side-nav-button mat-raised-button color="primary" [matMenuTriggerFor]="homeMenu">Home</button>
-    <mat-menu side-nav-menu #homeMenu="matMenu" xPosition="after" [overlapTrigger]="false">
-      <button mat-menu-item>Barcode</button>
-      <button mat-menu-item>Trimbox</button>
-    </mat-menu>
-
-    <button side-nav-button mat-raised-button color="primary" [matMenuTriggerFor]="opstwoMenu">Ops 2</button>
-    <mat-menu #opstwoMenu="matMenu" xPosition="after" [overlapTrigger]="false">
-      <button mat-menu-item>Add Template From</button>
-      <button mat-menu-item>Library Image Permission</button>
-      <button mat-menu-item>Users</button>
-      <button mat-menu-item>Content</button>
-      <button mat-menu-item>Items</button>
-      <button mat-menu-item>Limits</button>
-      <button mat-menu-item>Item Priority Table Update</button>
-    </mat-menu>
-
-    <button side-nav-button mat-raised-button color="primary" [matMenuTriggerFor]="opsoneMenu">Ops 1</button>
-    <mat-menu side-nav-menu #opsoneMenu="matMenu" xPosition="after" [overlapTrigger]="false">
-      <button mat-menu-item>Add Template From</button>
-      <button mat-menu-item>Library Image Permission</button>
-      <button mat-menu-item>Users</button>
-      <button mat-menu-item>Content</button>
-      <button mat-menu-item>Items</button>
-      <button mat-menu-item>Limits</button>
-      <button mat-menu-item>Copy Template From Parent</button>
-    </mat-menu>
-
-    <button side-nav-button mat-raised-button color="primary" [matMenuTriggerFor]="erpMenu">ERP</button>
-    <mat-menu #erpMenu="matMenu" xPosition="after" [overlapTrigger]="false">
-      <button mat-menu-item>Address Shipping Converter</button>
-      <button mat-menu-item>Time Off Summary Converter</button>
-      <button mat-menu-item>Property Code Upload</button>
-    </mat-menu>
-
-    <button side-nav-button mat-raised-button color="primary" [matMenuTriggerFor]="ffoMenu">Four51</button>
-    <mat-menu #ffoMenu="matMenu" xPosition="after" [overlapTrigger]="false">
-      <button mat-menu-item>New Account Onboarding</button>
-    </mat-menu>
-
-    <button side-nav-button mat-raised-button color="primary" [matMenuTriggerFor]="adminMenu">Administration</button>
-    <mat-menu #adminMenu="matMenu" xPosition="after" [overlapTrigger]="false">
-      <button mat-menu-item>Google Access</button>
-      <button mat-menu-item>Security</button>
-      <button mat-menu-item>Calls</button>
-      <button mat-menu-item>Conversion</button>
-      <button mat-menu-item>Integrations</button>
-      <button mat-menu-item>Integrations Log</button>
-      <button mat-menu-item>URL List</button>
-    </mat-menu>
-  </mat-sidenav>
-
-  <div fxFill fxLayout="column" fxLayoutAlign="space-around center">
-    <mat-card limitsCard>
-      <mat-card-header limitsCardHeader>
-        <mat-card-title>
-          <h3>Order Limits</h3>
-        </mat-card-title>
-      </mat-card-header>
-      <mat-card-content fxLayoutAlign="center">
-
-        <form [formGroup]="limitsForm" (ngSubmit)="onSubmit()" novalidate>
-          <div fxFill>
-            <div fxLayout="row" fxLayoutAlign="start stretch">
-              <mat-form-field>
-                <input matInput placeholder="MARSHA Code" [(ngModel)]="limitInfo.marshaCode" formControlName="marshaCode" (change)="getLimitInfo()">
-              </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start stretch">
-              <mat-form-field>
-                <input matInput placeholder="Last Order Date" [ngModel]="limitInfo.lastOrder | date: shortDate" formControlName="lastOrder"
-                  (ngModelChange)="value=$event">
-              </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start stretch">
-              <mat-form-field>
-                <input matInput placeholder="Current Limit" [(ngModel)]="limitInfo.limit" formControlName="limit">
-              </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start stretch">
-              <mat-form-field>
-                <input matInput placeholder="Currently Used" [(ngModel)]="limitInfo.onOrder" formControlName="onOrder">
-              </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start stretch">
-              <mat-form-field>
-                <input matInput placeholder="In Cart" [(ngModel)]="limitInfo.inCart" formControlName="inCart">
-              </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start stretch">
-              <mat-form-field>
-                <input matInput placeholder="Currently Available" [(ngModel)]="limitInfo.limit" formControlName="limit">
-              </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start stretch">
-              <mat-form-field>
-                <input matInput placeholder="Set Available To" [(ngModel)]="limitInfo.newLimit" formControlName="newLimit">
-              </mat-form-field>
-            </div>
-          </div>
-        </form>
-      </mat-card-content>
-      <mat-card-actions fxLayout="row" fxLayoutAlign="end center">
-        <button type="submit" (click)="onSubmit()" mat-raised-button color="primary" [disabled]="limitsForm.invalid">Set Available</button>
-      </mat-card-actions>
-    </mat-card>
-
-    <footer copyright fxLayoutAlign="end center">© 2012 - 2016 by Dexter Solutions, Inc. All rights reserved.</footer>
-
-  </div>
-</mat-sidenav-container>
+  <mat-sidenav-container fxFlexclass="main-container">
+    <mat-sidenav #sidenav mode="side" opened="true">
+      <app-dashboard></app-dashboard>
+    </mat-sidenav>
+    <div contentArea fxFill fxLayout="column" fxLayoutAlign="space-around center">
+      <router-outlet></router-outlet>
+      <footer copyright fxLayoutAlign="end center">© 2012 - 2016 by Dexter Solutions, Inc. All rights reserved.</footer>
+    </div>
+  </mat-sidenav-container>
+</div>
