--- a/DexterAdmin_Frontend/dexter-admin/src/styles.scss
+++ b/DexterAdmin_Frontend/dexter-admin/src/styles.scss
@@ -1,9 +1,5 @@
 @import '~@angular/material/theming';
-@import 'assets/themes/dexter-theme.scss';
-
-
-
-
+@import './assets/themes/dexter-theme.scss';
 
 
 
