Changed auth workflow to prevent automatic sign in

--- a/DexterAdmin_Frontend/dexter-admin/src/app/login/login.component.html
+++ b/DexterAdmin_Frontend/dexter-admin/src/app/login/login.component.html
@@ -1,3 +1,8 @@
 <button mat-raised-button userPanel color="accent" *ngIf="loggedInUser" (click)="openDialog()">
-  <img avatar-sm src="{{loggedInUser.photoURL}}" alt="Member Avatar" /> {{loggedInUser.displayName}}
+  <div fxLayout="row" fxLayoutAlign="space-around center">
+    <img avatar-sm src="{{loggedInUser.photoURL}}" alt="Member Avatar" /> {{loggedInUser.displayName}}
+  </div>
 </button>
+<div *ngIf="!loggedInUser">
+    <button id="loginBtn" fxFlexAlign="end" mat-raised-button color="accent" (click)="login()">Sign In</button>
+</div>
