--- a/DexterAdmin_Frontend/dexter-admin/src/app/login/account-dialog.component.html
+++ b/DexterAdmin_Frontend/dexter-admin/src/app/login/account-dialog.component.html
@@ -3,10 +3,11 @@
       <img avatar-lg src="{{user.photoURL}}" alt="Member Avatar" />
     </div>
     <div fxFlex fxAlign="center center">
-      <mat-card-title>{{user.displayName}}</mat-card-title>
-      <mat-card-subtitle>{{user.email}}</mat-card-subtitle>
+      <div><mat-card-title>{{user.displayName}}</mat-card-title></div>
+      <div><mat-card-subtitle>{{user.email}}</mat-card-subtitle></div>
     </div>
 </div>
 <div fxLayout="column" fxLayoutAlign="space-around end">
-    <button id="logoutBtn" fxFlexAlign="end" mat-button color="primary" [mat-dialog-close]="true">Logout</button>
+    <button id="logoutBtn" fxFlexAlign="end" mat-button color="primary" [mat-dialog-close]="true">Sign Out</button>
 </div>
+
