--- a/DexterAdmin_Frontend/dexter-admin/src/app/app.component.scss
+++ b/DexterAdmin_Frontend/dexter-admin/src/app/app.component.scss
@@ -17,9 +17,14 @@
 }
 
 [contentArea] {
-  padding: 4em;
+  // padding: 4em;
   min-height: 90vh !important;
   height: 100% !important;
+}
+
+[pageToolbar] {
+  padding-left: 5em;
+  margin-bottom: 4em;
 }
 
 [siteTitle] {
