Prepare for deploy to Azure

--- a/DexterAdmin_Frontend/dexter-admin/src/assets/themes/dexter-theme.scss
+++ b/DexterAdmin_Frontend/dexter-admin/src/assets/themes/dexter-theme.scss
@@ -43,7 +43,7 @@ $dexter-gray: (
         700: white,
         800: $white-87-opacity,
         900: $white-87-opacity,
-        A100: $black-87-opacity,
+        A100: $white-87-opacity,
         A200: white,
         A400: white,
         A700: white,
