--- a/DexterAdmin_Frontend/dexter-admin/src/app/loading-spinner/loading-spinner.component.html
+++ b/DexterAdmin_Frontend/dexter-admin/src/app/loading-spinner/loading-spinner.component.html
@@ -1,2 +1,5 @@
-  <mat-spinner class="loading-spinner" color="accent" mode="indeterminate">
-  </mat-spinner>
+<mat-progress-spinner
+  class="loading-spinner"
+  color="accent"
+  mode="indeterminate">
+</mat-progress-spinner>
