--- a/DexterAdmin_Frontend/dexter-admin/src/app/app.component.scss
+++ b/DexterAdmin_Frontend/dexter-admin/src/app/app.component.scss
@@ -2,37 +2,60 @@
 @import '../assets/themes/dexter-theme.scss';
 
 .main-container {
-  min-height: 100%;
-  height: 100%;
+    min-height: 100%;
+    height: 100%;
 }
 
 .main-sidenav {
-  padding: 20px;
-  min-width: 200px;
+    padding: 20px;
+    min-width: 200px;
 }
 
+.mat-drawer {
+  background-color: map-get($dexter-gray, 100) !important;
+}
+
+.mat-elevation-z5 {
+  position: relative;
+  z-index: 99;
+}
+
+// [menubutton] {
+//   border-radius: 0 !important;
+//   height: 100% !important;
+// }
+
 [mat-sidenav-container] {
- min-height: 100vh !important;
- height: 100vh !important;
+    min-height: 100vh !important;
+    height: 100vh !important;
 }
 
 [contentArea] {
-  // padding: 4em;
-  min-height: 90vh !important;
-  height: 100% !important;
+    // padding: 4em;
+    min-height: 90vh !important;
+    height: 100% !important;
+    background-color: map-get($dexter-gray, 100);
 }
 
 [pageToolbar] {
-  padding-left: 5em;
-  margin-bottom: 4em;
+    padding-left: 3em;
+    margin-bottom: 4em;
+}
+
+[pageTitle] {
+    color: map-get($dexter-gray, 100) !important;
 }
 
 [siteTitle] {
+    font-size: larger !important;
+    font-weight: bolder !important;
+}
+
+[siteLogo] {
   margin-left: 1.5em !important;
-  font-size: larger !important;
-  font-weight: bolder !important;
+  margin-right: 1em !important;
 }
 
 footer {
-  margin: 3em 0;
+    margin: 3em 0;
 }
