--- a/DexterAdmin_Frontend/dexter-admin/src/assets/themes/dexter-theme.scss
+++ b/DexterAdmin_Frontend/dexter-admin/src/assets/themes/dexter-theme.scss
@@ -29,15 +29,15 @@ $dexter-blue: (
 );
 
 $dexter-gray: (
-    100: #777274,
+    100: #e6e3e4,
     500: #4B4749,
     900: #232022,
     contrast: (
-        50: $black-87-opacity,
-        100: $black-87-opacity,
-        200: $black-87-opacity,
-        300: $black-87-opacity,
-        400: $black-87-opacity,
+        50: $white-87-opacity,
+        100: $white-87-opacity,
+        200: $white-87-opacity,
+        300: $white-87-opacity,
+        400: $white-87-opacity,
         500: white,
         600: white,
         700: white,
